--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "method-override": "^2.3.0",
     "glob": "^5.0.3",
     "mongoose": "^4.1.2",
-    "ejs": "^2.3.1"
+    "ejs": "^2.3.1",
+    "express-session":"*",
+    "connect-mongo":"*",
+    "connect-flash":"*"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
